2005-02-16  Dave Brolley  <brolley@redhat.com>

	* operand.scm (-derived-operand-parse): Move logit message from level 1
	to level 2.

2005-02-15  Nick Clifton  <nickc@redhat.com>

	* opc-itab.scm (-gen-ifmt-table-1): Add an ATTRIBUTE_UNUSED to
	prevent compile time warning messages.
	* opc-opinst.scm (-gen-operand-instance-table): Likewise.
	* utils-gen.scm (attr-int-gen-defn): Likewise.
	(attr-gen-defn): Likewise.
	* cpu/ip2k.opc (parse_addr16_p): Remove unused function.
	(print_dollarhex16): Remove unused function.

2005-02-15  Jim Blandy  <jimb@redhat.com>

	* guile.scm (cgen-call-with-debugging): Doc fix.

	Make backtraces work more reliably.
	* guile.scm: Set up debugging parameters, and enable debugging and
	source positions while loading.
	(cgen-call-with-debugging, cgen-debugging-stack-start): New
	functions.
	* read.scm: Don't set debugging parameters here.
	(catch-with-backtrace): Function deleted.
	(-cgen): Simply note the presence or absence of the -b option.
	Pass the flag to cgen-call-with-debugging, so debugging is turned
	off here if the user didn't request it, for faster computation.
	(cgen): Call cgen-debugging-stack-start here, instead of
	catch-with-backtrace.

	* Makefile.am (GUILE): Explicitly load guile.scm here, and leave a
	trailing -s.
	(desc, html, opcodes, sim-arch, sim-cpu, gas-test, sim-test):
	Don't write out the trailing -s here.
	* Makefile.in: Regenerated.
	* cgen-doc.scm, cgen-gas.scm, cgen-stest.scm): Don't load
	fixup.scm here; let the caller decide which Scheme's customization
	file to preload.
	* dev.scm: Load guile.scm, not fixup.scm.
	* fixup.scm: Deleted; contents have all moved to guile.scm.
	* README: Doc fix.

	* guile.scm (debug-write): New function.

2005-02-14  Jim Blandy  <jimb@redhat.com>

	* pmacros.scm (pmacros-init!): For .eval macros, use eval1 as the
	transformer procedure, not eval.  Transformer procedures take one
	argument.

2005-02-11  Nick Clifton  <nickc@redhat.com>
